# FileChat

./: PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  pyroproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yml
adapters/: drive_adapter.py
filechat/: constants.py
filechat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
filechat/handlers/: edit_parser.py  file_handler.py
handlers/: file_handler.py
telemetry/: collector.py
tests/: test_load_local.py  test_telemetry.py
vcs/: git_backend.py
