[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filechat"
version = "0.1.0"
description = "Local & cloud file-editing workflow"
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "coverage"]