[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filechat"
version = "0.1.0"
description = "Local & cloud file-editing workflow"
readme = "README.md"
dependencies = [
  "structlog>=24.0",
  "pygit2>=1.14",
  "google-api-python-client>=2.126",
  "google-auth-oauthlib>=1.2",
  # add others here
]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "coverage"]